On top button visibility fixed

--- a/css/style.css
+++ b/css/style.css
@@ -511,7 +511,7 @@ footer {
     padding-top:12px;
  }
 .on_top {
-
+    display: none;
     position: fixed;
     bottom: 45px;
     right: 40px;
